made data updatable

--- a/viewspug/main.pug
+++ b/viewspug/main.pug
@@ -1,3 +1,5 @@
-md-checkbox hey yesss
 div {{stringify(data)}}
 button(md-button, "(click)"="addProgram()") new program
+.program(
+  *ngIf="data&&data[0]"
+  "[data]"="data[0]")
