--- a/stylesass/material.scss
+++ b/stylesass/material.scss
@@ -6,9 +6,10 @@
 
 // Define a theme.
 $primary: mat-palette($mat-deep-purple);
-$accent:  mat-palette($mat-blue-grey, A200, A100, A400);
+$accent:  mat-palette($mat-blue, A200, A100, A400);
+$warn:    mat-palette($mat-red);
 
-$theme: mat-light-theme($primary, $accent);
+$theme: mat-light-theme($primary, $accent, $warn);
 
 // Include all theme styles for the components.
 @include angular-material-theme($theme);
