--- a/stylesass/style.scss
+++ b/stylesass/style.scss
@@ -1,1 +1,14 @@
-test{}
+.mat-input-placeholder-wrapper{
+  overflow: visible !important;
+}
+
+.program{
+  >.name{
+    display: flex;
+    width: 100%;
+    >*{
+      flex-basis: 300px;
+      flex-shink: 1;
+    }
+  }
+}
