--- a/viewspug/program.pug
+++ b/viewspug/program.pug
@@ -1,9 +1,3 @@
-.name
-  md-input-container
-    md-placeholder Studierichting
-    input(type="text", mdInput, "[(ngModel)]"="data.program")
-  md-input-container
-    md-placeholder Afstudeerrichting
-    input(type="text", mdInput, "[(ngModel)]"="data.graduationprogram")
-p {{data.program}}
+
+p {{data.objectId}}
 button(md-raised-button, color="accent" "(click)"="saveProgram()" ) Opslaan
