some more smaller changes

--- a/viewspug/course.pug
+++ b/viewspug/course.pug
@@ -15,6 +15,6 @@ md-card
     md-slide-toggle([(ngModel)]="data.graduationyear").halfwidth Verplicht in afstudeerjaar
 
   div
-    md-input-container
+    md-input-container.fullwidth
       md-placeholder ECT fiche Url
       input(type="text", mdInput,  [(ngModel)]="data.url")
