--- a/viewspug/year.pug
+++ b/viewspug/year.pug
@@ -1,8 +1,7 @@
 md-card
-  md-card-header
-    md-card-title Year {{data.order}}
+  md-card-title
+    h2 Jaar {{data.order}}
 
   .course(*ngFor="let course of data.courses", [data]="course")
   .buttonrow
-    button(md-raised-button, color="accent" "(click)"="newCourse()" ) Nieuw Opleidingsonderdeel
-    md-divider
+    button(md-raised-button, color="accent" "(click)"="newCourse()" ).fullwidth Nieuw Opleidingsonderdeel
