--- a/stylesass/style.scss
+++ b/stylesass/style.scss
@@ -28,15 +28,22 @@
     }
   }
   .program{
-    .periodelabel{
-      margin-bottom: 0;
-      color: rgba(0,0,0,.38);
-    }
-    .periode{
-      height: 42px;
-      position: relative;
-      >*{
-        position: absolute;
+    .year{
+      h2{
+        margin: 0;
+        font-family: 'Roboto', sans-serif;
+        font-weight: normal;
+      }
+      .periodelabel{
+        margin-bottom: 0;
+        color: rgba(0,0,0,.38);
+      }
+      .periode{
+        height: 42px;
+        position: relative;
+        >*{
+          position: absolute;
+        }
       }
     }
   }
