--- a/stylesass/style.scss
+++ b/stylesass/style.scss
@@ -1,3 +1,4 @@
+@import 'material.scss';
 .mat-input-placeholder-wrapper{
   overflow: visible !important;
 }
@@ -27,39 +28,68 @@
       float: right;
     }
   }
-  .program{
-    .year{
-      h2{
-        margin: 0;
-        font-family: 'Roboto', sans-serif;
-        font-weight: normal;
-      }
-      .periodelabel{
-        margin-bottom: 0;
-        color: rgba(0,0,0,.38);
-      }
-      .periode{
-        height: 42px;
-        position: relative;
-        >*{
-          position: absolute;
+
+    $primary: map-get($theme, primary);
+
+    .program{
+      margin-bottom: 30px;
+      .year{
+        >md-card{
+          padding-top: 0px;
+            >md-card-title{
+              background-color: #673ab7;
+              margin: 0 -24px;
+              padding: 12px 24px;
+              margin-bottom: 16px;
+              h2{
+                margin: 0;
+                font-family: 'Roboto', sans-serif;
+                font-weight: normal;
+                color: white;
+              }
+            }
+
+          }
+          .periodelabel{
+            margin-bottom: 0;
+            color: rgba(0,0,0,.38);
+          }
+          .periode{
+            height: 42px;
+            position: relative;
+            >*{
+              position: absolute;
+            }
+          }
+          .options{
+            width: 40px;
+            height: 40px;
+            position: absolute;
+            z-index: 1;
+            &.courseoptions{
+              top: 24px;
+              right: 16px;
+            }
+            &.yearoptions{
+              top: 15px;
+              right: 16px;
+              color:white;
+            }
+          }
         }
       }
-    }
-  }
-  md-card {
-    margin-bottom: 10px;
-  }
-  .fullwidth{
-    width: 100%;
-  }
-  .halfwidth{
-    width: 50%;
-    box-sizing: border-box;
-    display: inline-block;
-    &:nth-child(2n){
-      padding-left: 10px;
-    }
-  }
-
+      md-card {
+        margin-bottom: 10px;
+      }
+      .fullwidth{
+        width: 100%;
+      }
+      .halfwidth{
+        width: 50%;
+        box-sizing: border-box;
+        display: inline-block;
+        &:nth-child(2n){
+          padding-left: 10px;
+        }
+      }
 }
