--- a/viewspug/course.pug
+++ b/viewspug/course.pug
@@ -1,9 +1,22 @@
 md-card
   //| id = {{data.id}}
+  .courseoptions.options
+    button(md-icon-button, [mdMenuTriggerFor]="menu")
+      md-icon more_vert
+    md-menu( #menu="mdMenu")
+      button(md-menu-item, *ngIf="!first", (click)="moveUpF()")
+        md-icon keyboard_arrow_up
+        span Omhoog
+      button(md-menu-item, *ngIf="!last", (click)="moveDownF()")
+        md-icon keyboard_arrow_down
+        span Omlaag
+      button(md-menu-item, (click)="deleteF()")
+        md-icon delete
+        span Verwijder
   h3
-    md-input-container
-      md-placeholder Name
-      input(type="text", mdInput,  [(ngModel)]="data.name").fullwidth
+    md-input-container.fullwidth
+      md-placeholder Naam
+      input(type="text", mdInput,  [(ngModel)]="data.name")
   p.periodelabel Periode
   div.periode
     md-slider( min="0", max="4", step="1", [ngModel]="startperiode",(ngModelChange)="changeStart($event)").fullwidth
@@ -12,7 +25,7 @@ md-card
     md-input-container.halfwidth
       md-placeholder Studiepunten
       input(type="number", mdInput,  [(ngModel)]="data.studypoints")
-    md-slide-toggle([(ngModel)]="data.graduationyear").halfwidth Verplicht in afstudeerjaar
+    md-slide-toggle([(ngModel)]="data.graduationyear", *ngIf="lastYear").halfwidth Verplicht in afstudeerjaar
 
   div
     md-input-container.fullwidth
