--- a/stylesass/style.scss
+++ b/stylesass/style.scss
@@ -33,10 +33,15 @@
 
     .program{
       margin-bottom: 30px;
+      position: relative;
+      .sidesave{
+        position: fixed;
+        right: 50px;
+      }
       .year{
         >md-card{
           padding-top: 0px;
-            >md-card-title{
+          >md-card-title{
               background-color: #673ab7;
               margin: 0 -24px;
               padding: 12px 24px;
@@ -75,6 +80,31 @@
               right: 16px;
               color:white;
             }
+          }
+          .requisites{
+            p{
+              font-family: 'Roboto', sans-serif;
+              margin-top: 10px;
+              margin-bottom: 5px;
+            }
+            md-input-container{
+              width: 80%;
+            }
+            button{
+              margin-left: 5px;
+              box-sizing: border-box;
+              width: calc(20% - 5px);
+            }
+            md-chip{
+              margin-bottom: 5px;
+              margin-right: 5px;
+              cursor: pointer;
+
+              &:hover{
+                background-color: #ffb5af;
+              }
+            }
+
           }
         }
       }
