--- a/viewspug/main.pug
+++ b/viewspug/main.pug
@@ -1,2 +1,3 @@
 //div {{stringify(data)}}
-.programloader("[data]"="data")
+.programloader([data]="data", *ngIf="api.validAuth")
+.login( *ngIf="!api.validAuth")
