--- a/stylesass/material.scss
+++ b/stylesass/material.scss
@@ -6,7 +6,7 @@
 
 // Define a theme.
 $primary: mat-palette($mat-deep-purple);
-$accent:  mat-palette($mat-blue, A200, A100, A400);
+$accent:  mat-palette($mat-deep-purple, A200, A100, A400);
 $warn:    mat-palette($mat-red);
 
 $theme: mat-light-theme($primary, $accent, $warn);
