--- a/viewspug/program.pug
+++ b/viewspug/program.pug
@@ -7,4 +7,9 @@ button.sidesave(md-mini-fab, *ngIf="isDirty()", "(click)"="saveProgram()", [styl
 .year(*ngFor="let year of data.years; let ly = last", [data]="year", (delete)="deleteYearAt($event)", [lastYear]="ly", [program]="this")
 .buttonrow
   button(md-raised-button, color="accent", (click)="newYear()" ) Nieuw Studiejaar
+  
   button.right(md-raised-button, color="accent", [disabled]="!isDirty()", (click)="saveProgram()" ) Opslaan
+  
+  button.right(md-raised-button, color="warn", (click)="deleteProgram()" )
+    md-icon delete 
+    |Verwijder
