--- a/viewspug/course.pug
+++ b/viewspug/course.pug
@@ -33,7 +33,7 @@ md-card
     //div.periode
       md-slider( min="0", max="4", step="1", [ngModel]="startperiode",(ngModelChange)="changeStart($event)").fullwidth
       md-slider( invert min="0", max="4", step="1", [ngModel]="endperiode",(ngModelChange)="changeEnd($event)").fullwidth
-    .periode([periodestart]="data.start", [periodeduration]= "data.duration")
+    .periode([periodestart]="data.start", [periodeduration]= "data.duration",(update)="setPeriode($event)")
       
     div
       md-input-container.halfwidth
