fixed some frontend things

--- a/viewspug/programloader.pug
+++ b/viewspug/programloader.pug
@@ -1,7 +1,7 @@
 .name
 
   md-input-container
-    md-placeholder Studierichting
+    md-placeholder Opleiding
     input(type="text", mdInput,  [mdAutocomplete]="program", [(ngModel)]="selectedProgramName", (focusout)="checkProgram()", (input)="checkProgram()")
   md-autocomplete(#program="mdAutocomplete")
     md-option(*ngFor="let programname of getProgramNames()", [value]="programname")
