--- a/viewspug/course.pug
+++ b/viewspug/course.pug
@@ -29,12 +29,12 @@ md-card
 
   div(*ngIf="open")
     p.periodelabel Periode
-    
+
     //div.periode
       md-slider( min="0", max="4", step="1", [ngModel]="startperiode",(ngModelChange)="changeStart($event)").fullwidth
       md-slider( invert min="0", max="4", step="1", [ngModel]="endperiode",(ngModelChange)="changeEnd($event)").fullwidth
     .periode([periodestart]="data.start", [periodeduration]= "data.duration",(update)="setPeriode($event)")
-      
+
     div
       md-input-container.halfwidth
         md-placeholder Studiepunten
@@ -58,7 +58,7 @@ md-card
                 | {{course.name}}
           button(md-raised-button, color="accent" "(click)"="addEqualRequisite()", [disabled]="!getTypedEqualRequisite()") Toevoegen
     div(*ngIf="yearOrder>1").requisites
-      p Volgtijdigheden
+      p Volgtijdelijkheden
       md-chip-list
         md-chip(*ngFor="let courseId of data.prerequisites", (click)="removePreRequisite(courseId)" color="warn") {{getPreRequisite(courseId).name}}
         div
