fixed error on making new program

--- a/stylesass/style.scss
+++ b/stylesass/style.scss
@@ -44,6 +44,11 @@
   .program{
     margin-bottom: 30px;
     position: relative;
+    transition: opacity 0.5s;
+    &.disabled{
+      pointer-events: none;
+      opacity: 0.3;
+    }
     .sidesave{
       position: absolute;
       right: -50px;
